--- a/testimonio.html
+++ b/testimonio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Peluquería Canina Woof!</h1>
+        <h1>Bienvenido a Peluquería Canina Pet Care!</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
